@startuml DBS - Zadanie 4

left to right direction
skinparam class {
    FontStyle bold
}

!define primary_key(x) <b><color:#b8861b><&key></color> <color:#b8861b>x:</color></b>
!define foreign_key(x) <b><color:#464600><&key></color> <color:#464600>x</color>:</b>
!define column(x) <b><color:#efefef></color>x:</b>
!define value(x) <b><color:#7e2798>x</color></b>
!define table(x) entity x << (T, white) >>

table(users) {
    primary_key(id) value(INT)
    --
    column(email) value(VARCHAR)
    column(password) value(VARCHAR)
    column(remember_token) value(VARCHAR)
    column(created_at) value(TIMESTAMP)
    column(updated_at) value(TIMESTAMP)
}

table(roles) {
    primary_key(id) value(INT)
    --
    column(name) value(VARCHAR)
    column(created_at) value(TIMESTAMP)
    column(updated_at) value(TIMESTAMP)
}

table(role_user) {
    primary_key(id) value(INT)
    --
    foreign_key(user_id) value(INT)
    foreign_key(role_id) value(INT)
}

table(products) {
    primary_key(id) value(INT)
    --
    column(name) value(VARCHAR)
    column(description) value(TEXT)
    column(category) value(VARCHAR)
    column(anime) value(VARCHAR)
    column(color) value(VARCHAR)
    column(price) value(NUMERIC(8,2))
    column(popularity) value(INT)
    column(created_at) value(TIMESTAMP)
    column(updated_at) value(TIMESTAMP)
}

table(images) {
    primary_key(id) value(INT)
    --
    foreign_key(product_id) value(INT)
    column(image) value(VARCHAR)
    column(created_at) value(TIMESTAMP)
    column(updated_at) value(TIMESTAMP)
}

table(varinats) {
    primary_key(id) value(INT)
    --
    foreign_key(product_id) value(INT)
    column(size) value(VARCHAR)
    column(stock) value(INT)
    column(created_at) value(TIMESTAMP)
    column(updated_at) value(TIMESTAMP)
}

table(orders) {
    primary_key(id) value(INT)
    --
    foreign_key(user_id) value(INT)
    column(user_name) value(VARCHAR)
    column(user_email) value(VARCHAR)
    column(user_phone) value(VARCHAR)
    column(transportation) value(VARCHAR)
    column(payment_method) value(VARCHAR)
    column(user_country) value(VARCHAR)
    column(user_city) value(VARCHAR)
    column(user_zip) value(VARCHAR)
    column(user_street) value(VARCHAR)
    column(user_house_number) value(INT)
    column(price) value(FLOAT)
    column(created_at) value(TIMESTAMP)
    column(updated_at) value(TIMESTAMP)
}

table(order_varinat) {
    primary_key(id) value(INT)
    --
    foreign_key(order_id) value(INT)
    foreign_key(varinat_id) value(INT)
    column(amount) value(INT)
    column(created_at) value(TIMESTAMP)
    column(updated_at) value(TIMESTAMP)
}

table(carts) {
    primary_key(id) value(INT)
    --
    foreign_key(user_id) value(INT)
    foreign_key(varinat_id) value(INT)
    column(amount) value(INT)
    column(created_at) value(TIMESTAMP)
    column(updated_at) value(TIMESTAMP)
}

users::id ||--o{ role_user::user_id
role_user::role_id }o--|| roles::id

images::product_id }o--|| products::id
products::id ||--|{ varinats::product_id

orders::user_id }o--|| users::id
users::id ||--o{ carts::user_id

order_varinat::order_id }o--||orders::id
order_varinat::varinat_id }o--|| varinats::id

varinats::id ||--o{ carts::varinat_id

@enduml